added GET sensor/warnings
